--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 # Web 框架
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
+fastapi==0.122.0
+uvicorn==0.38.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
 
 # HTTP 客户端
-httpx==0.26.0
-openai==1.10.0
+httpx==0.28.1
+openai==2.8.1
 
 # 机器学习
-scikit-learn==1.4.0
-joblib==1.3.2
+scikit-learn==1.7.2
+joblib==1.5.2
 
 # 中文分词
 jieba==0.42.1
 
 # 数据库
-aiosqlite==0.19.0
+aiosqlite==0.21.0
