--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ pydantic-settings==2.12.0
 httpx==0.28.1
 openai==2.8.1
 
+# JSON（高性能序列化）
+orjson==3.10.15
+
 # 机器学习
 scikit-learn==1.7.2
 joblib==1.5.2
