--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ orjson==3.10.15
 # 机器学习
 scikit-learn==1.7.2
 joblib==1.5.2
-fasttext-wheel==0.9.2
+fasttext-wheel==0.9.2; python_version < "3.13"
 numpy<2.0  # fastText 尚未完全兼容 NumPy 2.0
 
 # 中文分词
